# depthsplat

./: .gitmodules  pyproject.toml
config/experiment/: nerfstudio.yaml
dataset/: nerfstudio
scripts/: inference_depth.sh  nerfstudio_depthsplat_train.sh
src/: main.py
src/dataset/: __init__.py  dataset_nerfstudio.py
