[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depthsplat"
version = "0.1.0"
description = "DepthSplat: Connecting Gaussian Splatting and Depth - CVPR 2025"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Haofei Xu", email = "haofei.xu@inf.ethz.ch"},
    {name = "Songyou Peng", email = "songyou.peng@inf.ethz.ch"},
    {name = "Fangjinhua Wang", email = "fangjinhua.wang@inf.ethz.ch"},
    {name = "Hermann Blum", email = "hermann.blum@inf.ethz.ch"},
    {name = "Daniel Barath", email = "daniel.barath@inf.ethz.ch"},
    {name = "Andreas Geiger", email = "andreas.geiger@inf.ethz.ch"},
    {name = "Marc Pollefeys", email = "marc.pollefeys@inf.ethz.ch"},
]
keywords = ["computer-vision", "3d-rendering", "gaussian-splatting", "depth-estimation", "novel-view-synthesis", "multi-view-stereo"]

dependencies = [
    "torch",
    "torchvision",
    "beartype>=0.18.5",
    "colorama>=0.4.6",
    "colorspacious>=1.1.2",
    "dacite>=1.8.1",
    "e3nn>=0.5.1",
    "einops>=0.8.0",
    "hydra-core>=1.3.2",
    "jaxtyping>=0.2.33",
    "lpips>=0.1.4",
    "matplotlib>=3.9.1",
    "moviepy>=1.0.3",
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "Pillow>=10.4.0",
    "plyfile>=1.1",
    "pytorch-lightning>=2.4.0",
    "scikit-image>=0.24",
    "sk-video>=1.1.10",
    "tabulate>=0.9.0",
    "tqdm>=4.66.4",
    "wandb>=0.17.7",
    "xformers>=0.0.27.post2",
]

[tool.uv]
# Disable build isolation for torch to allow custom compilation
no-build-isolation = ["torch", "torchvision", "diff-gaussian-rasterization-modified"]

[tool.uv.sources]
diff-gaussian-rasterization-modified = { git = "https://github.com/dcharatan/diff-gaussian-rasterization-modified" }

[tool.hatch.build.targets.wheel]
packages = ["src"]